# dataparser_core

./: Cargo.toml  README.md
examples/: basic_decoding.rs  basic_encoding.rs
src/: crypto.rs  errors.rs  lib.rs  options.rs  utils.rs
src/encoder/: core.rs  helpers.rs  macros.rs  mod.rs
src/encoder/writers/: mod.rs
src/encoder/writers/async_writer/: combinators.rs  core.rs  helpers.rs  macros.rs  mod.rs
src/encoder/writers/sync_writer/: combinators.rs  core.rs  helpers.rs  macros.rs  mod.rs
src/parser/: buffer.rs  combinators.rs  core.rs  helpers.rs  macros.rs  mod.rs  strings.rs
src/parser/readers/: mod.rs
src/parser/readers/async_reader/: core.rs  mod.rs
src/parser/readers/sync_reader/: combinators.rs  core.rs  helpers.rs  mod.rs
