[package]
edition = "2024"
version = "0.1.0"
name = "dataparser_core"
readme = "README.md"
repository = "https://github.com/mrLochness350/dataparser_core"

[lib]
name = "dataparser_core"
proc-macro = false
edition = "2024"

[dependencies]
dataparser_derive = { version = "0.1.0", optional = true}
paste = "1.0.15"
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }
tokio = {version = "1.44.1", optional = true , features = ["io-util", "rt", "rt-multi-thread", "macros"] }
async-trait = { version = "0.1.88", optional = true }
thiserror = "2.0.12"
[features]
derive = ["dep:dataparser_derive"]
crypto = ["dep:aes", "dep:cbc"]
async = ["dep:tokio", "dep:async-trait"]
